--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -82,11 +82,11 @@
   --border: oklch(0.922 0 0);
   --input: oklch(0.922 0 0);
   --ring: oklch(0.708 0 0);
-  --chart-1: var(--color-blue-300);
-  --chart-2: var(--color-blue-500);
-  --chart-3: var(--color-blue-600);
-  --chart-4: var(--color-blue-700);
-  --chart-5: var(--color-blue-800);
+  --chart-1: var(--color-zinc-900);
+  --chart-2: var(--color-zinc-700);
+  --chart-3: var(--color-zinc-500);
+  --chart-4: var(--color-zinc-300);
+  --chart-5: var(--color-zinc-100);
   --radius: 0.5rem;
   --sidebar: oklch(0.985 0 0);
   --sidebar-foreground: oklch(0.145 0 0);
@@ -134,11 +134,11 @@
   --border: oklch(1 0 0 / 10%);
   --input: oklch(1 0 0 / 15%);
   --ring: oklch(0.556 0 0);
-  --chart-1: var(--color-blue-300);
-  --chart-2: var(--color-blue-500);
-  --chart-3: var(--color-blue-600);
-  --chart-4: var(--color-blue-700);
-  --chart-5: var(--color-blue-800);
+  --chart-1: var(--color-zinc-100);
+  --chart-2: var(--color-zinc-300);
+  --chart-3: var(--color-zinc-500);
+  --chart-4: var(--color-zinc-700);
+  --chart-5: var(--color-zinc-900);
   --sidebar: oklch(0.205 0 0);
   --sidebar-foreground: oklch(0.985 0 0);
   --sidebar-primary: oklch(0.488 0.243 264.376);
